- fixed file descriptor leak in log.c (log_rotate)
22/06/2004 0.0.8 fix release
- now lycos deletes messages from the trash
- doc to kernel.lua
- fixed some lycos issues
20/06/2004 0.0.7 fix release
- fixed gentoo (thanks Er Capoccia)
- added some shortcuts to the win32 installer
- fixed curl_lua
19/06/2004 0.0.6 fix release
- fixed some lycos problems 
- documented lycos.lua in the manual
15/06/2004 0.0.5 feature release
- proxy fixed
- added kernel.org plugin (kernel.lua)
- aggregator.lua now encodes uidl strings
- added mimer module
- fixed bug in base64
- fixed bug in browser
- lycos.it webmail support
- fixed mlex.c bug
- fixed a tin webmail reference to a libero function
07/06/2004 0.0.4 fix/source-reorganization release
- added pkg file for Mac OS X
- documentation for new modules
- badguy feature added to tin.lua
- added luabind module (factorization of useful functions in bindings)
- completely removed tolua++
- bindings for getdate made by hand
- bindings for popserver made bt hand
- fixed curl_lua for truncating a connection in the callback
- session_lua now are made by hand, no more tolua++
- log_lua now are made by hand, no more tolua++
- all webmail now share the same get_name and get_domain functions
- fixed stupid fetchmail top bug
- log used to write liberopopsd :)
- fixed "-" in the username
- proxy AUTH issue workaround (not able to make CURLAUTH_ANY work)
28/05/2004 0.0.3 bomb! feature release
- updated the doc
- fixed libero webmail to new mlex and new libero webmail (nobody
noticed it has changed so much? probably because the old mlex continued
to work properly, but it was a lucky case!)
- added tin webmail
- improved mlex.c with <script> correct handling
- fixed http redirection 
- fixed browser cookie generation
19/05/2004 0.0.2 feature release [never released]
- added browser:get_head(url,extraheader) method
- fixed Makefile verbosity
- fixed chroot jail for curl
- fixed aggregator.lua (thanks to bimbosuper)