@@ -6,29 +6,9 @@
 
 /******************************************************************************
  * File description:
- *	some libc for beos
+ *	bla bla bla
  * Notes:
- *	
+ *	blablabla
  * Authors:
- * 	Name <gareuselesinge@users.sourceforge.net>
+ * 	Name <nickname@users.sourceforge.net>
  ******************************************************************************/
-#ifdef BEOS
-
-#include "beos_compatibility.h"
-
-#ifndef index
-char* index(const char * s, int i)
-{
-char* r=(char *)s;
-while(*r != '\0')
-	{
-	if( *r == i)
-		return r;
-
-	r++;
-	}
-return NULL;
-}
-#endif
-
-#endif
