@@ -1,1 +1,19 @@
+/******************************************************************************
+ * $Id$
+ * This file is part of FreePOPs (http://freepops.sf.net)                     *
+ * This file is distributed under the terms of GNU GPL license.               *
+ ******************************************************************************/
+
+
+/******************************************************************************/
+ /*!
+  * \file   base64_lua.h
+  * \brief  base64 lua bindings
+  * 
+  * \author Name <gareuselesinge@users.sourceforge.net>
+  */
+/******************************************************************************/
+#ifndef BASE64_LUA_H
+#define BASE64_LUA_H
 extern int luaopen_base64(lua_State*);
+#endif
