@@ -1,3 +1,18 @@
+/******************************************************************************
+ * $Id$
+ * This file is part of FreePOPs (http://freepops.sf.net)                     *
+ * This file is distributed under the terms of GNU GPL license.               *
+ ******************************************************************************/
+
+
+/******************************************************************************/
+ /*!
+  * \file   getdate_lua.h
+  * \brief  getdate lua bindings
+  * 
+  * \author Name <gareuselesinge@users.sourceforge.net>
+  */
+/******************************************************************************/
 #ifndef GETDATE_LUA_H
 #define GETDATE_LUA_H
 
