@@ -1,3 +1,18 @@
+/******************************************************************************
+ * $Id$
+ * This file is part of FreePOPs (http://freepops.sf.net)                     *
+ * This file is distributed under the terms of GNU GPL license.               *
+ ******************************************************************************/
+
+
+/******************************************************************************/
+ /*!
+  * \file   log_lua.h
+  * \brief  log lua bindings
+  * 
+  * \author Name <gareuselesinge@users.sourceforge.net>
+  */
+/******************************************************************************/
 #ifndef LOG_LUA_H
 #define LOG_LUA_H
 int luaopen_log(lua_State*);
