@@ -1,3 +1,19 @@
+/******************************************************************************
+ * $Id$
+ * This file is part of FreePOPs (http://freepops.sf.net)                     *
+ * This file is distributed under the terms of GNU GPL license.               *
+ ******************************************************************************/
+
+
+/******************************************************************************/
+ /*!
+  * \file   psock_lua.h
+  * \brief  portablesocket lua bindings
+  * 
+  * \author Name <gareuselesinge@users.sourceforge.net>
+  */
+/******************************************************************************/
+
 #ifndef PSOCK_LUA_H
 #define PSOCK_LUA_H
 extern int luaopen_psock (lua_State*L);
