@@ -2,6 +2,10 @@
 -- This module implements some looping primitives, some useful wrappers.
 -- should be used to make code shorter.
 
+--============================================================================--
+-- This is part of FreePOPs (http://freepops.sf.net) released under GNU/GPL  
+--============================================================================--
+
 support = {}
 
 ---
